Fix HTML encoding issues and clean up code

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<html>
 <html lang="es">
 <head>
 <meta charset="UTF-8">
@@ -171,7 +171,7 @@ function aceptar(){
 
     // Mostrar imagen
     const img = document.createElement("img");
-    img.src="sorpresa.jpeg";
+    img.src="Sorpresa.jpeg";
     img.classList.add("sorpresa");
     document.body.appendChild(img);
 
@@ -193,3 +193,4 @@ function aceptar(){
 
 </body>
 </html>
+
